--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,5 +1,4 @@
 .header{
-    padding: 1rem;
     background-color: var(--blanco);
 }
 
@@ -7,11 +6,40 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 1rem;
 }
 
 .menuLink{
-    display: none;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--negro);  
+    text-align: center;
+    width: 100%;
+    height: 332px;
+    position: absolute;
+    top: 104px;
+    opacity: 1;
+    transition: all 0.5s ease; 
+    left: -100%; 
 }
+.menuLink a{
+    text-decoration: none;
+    color: var(--blanco);
+    padding: 30px;
+    
+}
+.menuLink a:hover{
+    background-color: var(--primary);
+    color: var(--blanco);
+}
+
+.menuLink.active{
+    transition: all 0.5s ease;
+    opacity: 1; 
+    left: 0%; 
+    z-index: 1;
+}
+
 .menuBars{
     display: block;
 }
