--- a/styles/ProductoPesca.module.css
+++ b/styles/ProductoPesca.module.css
@@ -63,6 +63,9 @@
     transition: 0.5s;
     overflow: hidden;
 }
+.producto{
+    width: 100%;
+}
 @media ( min-width:768px){
     .producto:hover{
         box-shadow: 5px 5px 30px rgba(0,0,0,0.8);
